adds new main routine and explores broken state of the decode

--- a/COBS-Redux/Cpp/COBS/COBS/CMakeLists.txt
+++ b/COBS-Redux/Cpp/COBS/COBS/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 
 # Add source to this project's executable.
-add_executable (COBS "COBS.cpp" "COBS.h")
+add_executable (COBS "COBS.cpp" "COBS.h" "main.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET COBS PROPERTY CXX_STANDARD 20)
