--- a/COBS-Redux/Cpp/COBS/COBS/CMakeLists.txt
+++ b/COBS-Redux/Cpp/COBS/COBS/CMakeLists.txt
@@ -3,10 +3,9 @@
 #
 
 # Add source to this project's executable.
-add_executable (COBS "COBS.cpp" "COBS.h" "main.cpp" "test_vectors.h")
+add_executable (COBS "COBS.cpp" "COBS.h" "main.cpp" "test_vectors.h" "utils.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET COBS PROPERTY CXX_STANDARD 20)
 endif()
 
-# TODO: Add tests and install targets if needed.
